# riscv-trace-spec

./: .gitignore  Dockerfile  Makefile  Makefile-latex  README.md  antora.yml  branchTrace.adoc  branchTrace.tex  control.adoc  control.tex  dataTracePayload.adoc  dataTracePayload.tex  decoder-algorithm-public-v3.h  decoder.adoc  decoder.tex  discovery.adoc  discovery.tex  exampleAlgorithm.adoc  exampleAlgorithm.tex  exampleCodeSnippets.adoc  exampleCodeSnippets.tex  extensions.adoc  filtering.adoc  filtering.tex  fragmentCodeAndTransport.adoc  fragmentCodeAndTransport.tex  future.adoc  future.tex  futures.tex  header.adoc  ingressPort.adoc  ingressPort.tex  introduction.adoc  introduction.tex  payload.adoc  payload.tex  preamble.tex  riscv-trace-spec.tex  timestamping.adoc  timestamping.tex  (+1 more)
.github/workflows/: build-pdf.yml  build.yaml
modules/ROOT/: nav.adoc
modules/ROOT/pages/: branchTrace.adoc  control.adoc  dataTracePayload.adoc  decoder.adoc  discovery.adoc  exampleAlgorithm.adoc  exampleCodeSnippets.adoc  filtering.adoc  fragmentCodeAndTransport.adoc  future.adoc  header.adoc  index.adoc  ingressPort.adoc  payload.adoc  preamble.adoc  preface.adoc  timestamping.adoc
referenceFlow/: CMakeLists.txt  README  README.how_to_add_a_new_test
referenceFlow/LICENSES/: BSD-2-Clause.txt  MIT.txt
referenceFlow/common/: CMakeLists.txt
referenceFlow/common/inc/: utils.h
referenceFlow/common/src/: utils.c
referenceFlow/post-iss/: CMakeLists.txt
referenceFlow/post-iss/inc/: post_inst_set_sim.h  static_config_parser.h
referenceFlow/post-iss/src/: post-iss.c  post_inst_set_sim.c  static_config_parser.c
referenceFlow/riscv-disassembler/: CMakeLists.txt  README.md
referenceFlow/riscv-disassembler/src/: riscv-disas.c  riscv-disas.h  test-disas.c  test-encode.c
referenceFlow/scripts/: build.sh  compare_data_trace.py  compare_pc_trace.py  compare_te_inst.py  data_decoder_model.py  data_encoder_model.py  decoder_model.py  encoder_model.py  run_regression.sh  setup.sh  te_inst_deserialiser.py
referenceFlow/scripts/common/: __init__.py  csv_headers.py  data_trace.py  generic.py  inst_trace.py  raw_file.py  raw_packet.py  raw_read.py  raw_write.py  utils.py
referenceFlow/tests/config_files/: d_template.scf  d_template.ucf  i_template.scf  i_template.ucf
referenceFlow/tests/examples/: build.sh  run.sh
referenceFlow/tests/examples/br_j_asm_test/br_j_asm_test/: Makefile  riscv_test.ld
referenceFlow/tests/examples/hello_pk/: CMakeLists.txt  hello_pk.c
referenceFlow/tests/examples/minimal_asm/: CMakeLists.txt  minimal_asm.S  minimal_asm.ld
referenceFlow/tests/test_files/: README.test_discon_branch_exception  README.tests  coremark.riscv  dhrystone.riscv  embench-aha-mont64.riscv  embench-crc32.riscv  embench-cubic.riscv  embench-edn.riscv  embench-huffbench.riscv  embench-matmult-int.riscv  embench-minver.riscv  embench-nbody.riscv  embench-nettle-aes.riscv  embench-nettle-sha256.riscv  embench-nsichneu.riscv  embench-picojpeg.riscv  embench-qrduino.riscv  embench-sglib-combined.riscv  embench-slre.riscv  embench-st.riscv  embench-ud.riscv  embench-wikisort.riscv  hello_world.pk  median.riscv  mm.riscv  mt-vvadd.riscv  multiply.riscv  new_hw.pk  pk.riscv  qsort.riscv  rsort.riscv  spmv.riscv  test_discon_branch_exception.riscv  test_discon_branch_exception.spike_pc_trace  towers.riscv  xrle.riscv
referenceFlow/tests/test_suites/: dtype_basic.sh  dtype_debug.sh  dtype_no_address.sh  dtype_no_data.sh  exit_codes.sh  itype3_basic.sh  itype3_debug.sh  itype4_basic.sh  itype4_call_stack.sh  itype4_debug.sh  itype4_fake_scf.sh
referenceFlow/tests/unit/: CMakeLists.txt  test_post_inst_set_sim.c  test_static_conf_parser.c  test_utils.c
te_codec/src/: decoder-algorithm-public.c  decoder-algorithm-public.h  encoder-algorithm-public.c  encoder-algorithm-public.h  te-codec-utilities.c  te-codec-utilities.h  te-elf-dis.c  te-elf-dis.h  te-memory.h
tests/br_j_asm_test/: Makefile  riscv_test.ld  test.S
